--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "timestamp",
+  "name": "shorturl",
   "version": "1.0.0",
-  "description": "",
+  "description": "Freecodecamp Timestamp API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sandeepscet/shorturl-freecodecamp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sandeepscet/shorturl-freecodecamp/issues"
+  },
+  "homepage": "https://github.com/sandeepscet/shorturl-freecodecamp#readme"
 }
